--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,10 @@
             <artifactId>itextpdf</artifactId>
             <version>5.0.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
