--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,12 @@ spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
 server.error.include-message=always
 
-
+# SMTP config
+spring.mail.host=smtp.gmail.com
+spring.mail.username=pidevers3a10@gmail.com
+spring.mail.password=pddgslwpwsdvlomv
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.port=25
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
