--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
 # Server
-
+spring.mvc.pathmatch.matching-strategy =ant_path_matcher
 server.error.include-message=always
 
 
